2001-10-06  Joseph S. Myers  <jsm28@cam.ac.uk>

	* hunt/hunt/hunt.6.in: Correct slime costs.  Bug reported by
	Britton Leo Kerin <fsblk@aurora.uaf.edu>.

2001-09-02  Joseph S. Myers  <jsm28@cam.ac.uk>

	* adventure/setup.c, atc/include.h, boggle/mkdict/mkdict.c,
	fortune/datfiles/fortunes, fortune/datfiles/fortunes-o.real,
	monop/execute.c, sail/main.c, snake/snake/snake.c, worm/worm.6,
	worm/worm.c, wump/wump.c, wtf/acronyms: Update from NetBSD CVS.

2001-08-30  Joseph S. Myers  <jsm28@cam.ac.uk>

	* Version 2.13.

	* COPYING, NEWS, TODO, bsd-games-non-free.lsm, bsd-games.lsm:
	Update.
	* phantasia/Makefrag: Update copyright dates.

	* hunt/hunt/hunt.c, hunt/huntd/get_names.c: Define MAXHOSTNAMELEN
	if not already defined.  May fix Hurd compilation (original patch
	from Igor Khavkine <i_khavki@alcor.concordia.ca>).

	* snake/snake/snake.c (main): Control -d by #ifdef DEBUG; adjust
	usage message accordingly.  Bug reported by Malcolm Parsons
	<malcolm@ivywell.screaming.net>.

	* mille/save.c (save): Handle '\r' the same as '\n'.  Bug reported
	by Nicolas Lichtmaier <nick@technisys.com.ar>.

	* snake/snake/snake.c (post): Always lseek back to the beginning
	of the file.  Patch from Malcolm Parsons
	<malcolm@ivywell.screaming.net>.

	* wump/wump.c (gcd): New function.
	(cave_init): Ensure that gcd of (delta + 1) and room_num is 1.
	Based on bug report and patch by <afghan@afghanhound.org.uk>.

	* worm/worm.c: Keep track of visible worm length.
	(newpos): If nowhere is available for the new prize, have the
	player win rather than hanging.  Bug reported by Malcolm Parsons
	<malcolm@ivywell.screaming.net>.

	* phantasia/Makefrag: Use a stamp file for generating score files.
	* phantasia/.cvsignore: Update.

2001-08-29  Joseph S. Myers  <jsm28@cam.ac.uk>

	* worm/worm.c (main): Check for too small a screen size.
	(newpos): Fix off-by-one error preventing the prize from being
	placed on the top line.
	(process): Position score appropriately for different width
	screens.
