@@ -1,4 +1,4 @@
-/*	$NetBSD: main.c,v 1.16 2000/05/08 07:56:01 mycroft Exp $	*/
+/*	$NetBSD: main.c,v 1.17 2001/09/18 18:15:49 wiz Exp $	*/
 
 /*
  * Copyright (c) 1980, 1993
@@ -43,7 +43,7 @@ __COPYRIGHT("@(#) Copyright (c) 1980, 1993\n\
 #if 0
 static char sccsid[] = "@(#)main.c	8.1 (Berkeley) 5/31/93";
 #else
-__RCSID("$NetBSD: main.c,v 1.16 2000/05/08 07:56:01 mycroft Exp $");
+__RCSID("$NetBSD: main.c,v 1.17 2001/09/18 18:15:49 wiz Exp $");
 #endif
 #endif				/* not lint */
 
@@ -270,7 +270,7 @@ main(argc, argv)
 				cturn = -1;
 			}
 		}
-		/* initalize variables according to whose turn it is */
+		/* initialize variables according to whose turn it is */
 
 		if (cturn == 1) {	/* red */
 			home = 25;
