@@ -1,9 +1,9 @@
-$NetBSD: hack.fix,v 1.2 1995/03/23 08:30:17 cgd Exp $
+$NetBSD: hack.fix,v 1.3 2001/09/16 16:34:25 wiz Exp $
 
 /***** unido:net.games.hack / ab /  7:23 pm  Sep 13, 1985*/
 
 Recently hack (1.0.3) crashed with core dumps during some good games.
-The crashes occured in the onbill-routine. After investigating the core
+The crashes occurred in the onbill-routine. After investigating the core
 dump I found that the shopkeeper's bill was still to be paid.  Normaly
 if you leave a shop the bill will be cleared and onbill() would not
 check it. But under certain conditions you can leave a shop without
