@@ -1,4 +1,4 @@
-/*	$NetBSD: pl_7.c,v 1.24 2001/02/05 01:10:11 christos Exp $	*/
+/*	$NetBSD: pl_7.c,v 1.25 2001/09/24 13:22:29 wiz Exp $	*/
 
 /*
  * Copyright (c) 1983, 1993
@@ -38,7 +38,7 @@
 #if 0
 static char sccsid[] = "@(#)pl_7.c	8.1 (Berkeley) 5/31/93";
 #else
-__RCSID("$NetBSD: pl_7.c,v 1.24 2001/02/05 01:10:11 christos Exp $");
+__RCSID("$NetBSD: pl_7.c,v 1.25 2001/09/24 13:22:29 wiz Exp $");
 #endif
 #endif /* not lint */
 
@@ -178,9 +178,9 @@ Signal(const char *fmt, struct ship *ship, ...)
 	va_list ap;
 	char format[BUFSIZ];
 
-	va_start(ap, ship);
 	if (!done_curses)
 		return;
+	va_start(ap, ship);
 	if (*fmt == '\7')
 		putchar(*fmt++);
 	fmtship(format, sizeof(format), fmt, ship);
@@ -195,9 +195,9 @@ Msg(const char *fmt, ...)
 {
 	va_list ap;
 
-	va_start(ap, fmt);
 	if (!done_curses)
 		return;
+	va_start(ap, fmt);
 	if (*fmt == '\7')
 		putchar(*fmt++);
 	vwprintw(scroll_w, fmt, ap);
